@@ -34,6 +34,9 @@ Bug Fixes
 * An error that occured when creating builds with custom
   anaconda-templates and with the XMLRPC log file enabled has been
   corrected. (RBL-2764)
+* A bug in the rbuidler command line that caused the wrong flavor of
+  anaconda-templates to be used when the flavor was not specified has
+  been fixed. (RBL-2760)
 
 
 Changes in 4.0.1
